# oneplus_kernel_backport

./: BUILD.bazel  MAINTAINERS  Makefile  README.md  build.config.wonder  merge_oplus_kernel.sh  modules.bzl  vps_merge.sh
android/: abi_gki_aarch64.stg.allowed_breaks  abi_gki_aarch64_amlogic  abi_gki_aarch64_db845c  abi_gki_aarch64_fips140  abi_gki_aarch64_galaxy  abi_gki_aarch64_honor  abi_gki_aarch64_imx  abi_gki_aarch64_lenovo  abi_gki_aarch64_moto  abi_gki_aarch64_mtk  abi_gki_aarch64_nvidia  abi_gki_aarch64_oplus  abi_gki_aarch64_pixel  abi_gki_aarch64_pixel_watch  abi_gki_aarch64_qcom  abi_gki_aarch64_siengine  abi_gki_aarch64_sunxi  abi_gki_aarch64_transsion  abi_gki_aarch64_virtual_device  abi_gki_aarch64_vivo  abi_gki_aarch64_wonder  abi_gki_aarch64_xiaomi  abi_gki_aarch64_xiaomi_wear  abi_gki_protected_exports_aarch64
bazel/test/: BUILD.bazel  kleaf_test.bzl
block/: Makefile  adios.c  bdev.c  bio.c  blk-cgroup.c  blk-crypto-fallback.c  blk-mq.c  blk-settings.c  blk-zoned.c  elevator.c  fops.c
crypto/: Kconfig  jitterentropy-kcapi.c
drivers/: Kconfig  Makefile
fs/: buffer.c  dcache.c  eventpoll.c  exec.c  file.c  fs-writeback.c  inode.c  kernel_read_file.c  libfs.c  locks.c  namei.c  namespace.c  open.c  super.c  userfaultfd.c  xattr.c
init/: Kconfig  Kconfig.gki  init_task.c  main.c
io_uring/: io_uring.c  io_uring.h
kernel/: cfi.c  exit.c  fork.c  freezer.c  pid.c  signal.c  stop_machine.c  sys.c  watchdog.c
lib/: Kconfig.debug  maple_tree.c  plist.c
mm/: Kconfig  cma.c  filemap.c  gup.c  huge_memory.c  hugetlb.c  hugetlb.c.orig  khugepaged.c  (+35 more)
(+508 files in other folders)
